--- a/index.html
+++ b/index.html
@@ -298,6 +298,50 @@
         </div>
     </div>
 
+    <div class="container margin-top categories">
+        <div class="d-flex justify-content-center">
+            <div class="category-header">
+                <h3>Categories</h3>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 d-flex justify-content-center align-items-center">
+                <div>
+                    <div class="cat d-flex justify-content-center align-items-center">
+                        <div>
+                            <img src="images/Categories/bag.png" alt="">
+                            <h5 class="common-cat">Bag</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="cat d-flex justify-content-center align-items-center inner-margin">
+                    <div>
+                        <img src="images/Categories/perfume.png" alt="">
+                        <h5 class="common-cat">Beauty</h5>
+                    </div>
+                </div>
+                <div class="cat d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="images/Categories/shoe.png" alt="">
+                        <h5 class="cat-shoes">Shoes</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <div>
+                    <img src="images/Categories/pale-order.png" class="w-100" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-center">
+        <small>&copy;2020 | All rights reserved. Hasib Muhammad</small>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
