--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a class="nav-link" href="#product">Product</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#categories">Categories</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#about">About Us</a>
                     </li>
                     <li class="nav-item">
@@ -118,7 +121,7 @@
         </div>
     </div>
 
-    <div class="container smartphone-top margin-top d-flex justify-content-between">
+    <div id="product" class="container smartphone-top margin-top d-flex justify-content-between">
         <h3>Smartphone</h3>
         <a href="#">
             <h6>See All</h6>
@@ -298,7 +301,7 @@
         </div>
     </div>
 
-    <div class="container margin-top categories">
+    <div id="categories" class="container margin-top categories">
         <div class="d-flex justify-content-center">
             <div class="category-header">
                 <h3>Categories</h3>
